<resources>
    <string name="app_name">CakeShop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home_fragment_label">HomePage</string>
    <string name="Login_fragment_label">LoginPage</string>
    <string name="Register_fragment_label">RegisterPage</string>
    <string name="username">輸入帳號</string>
    <string name="password">輸入密碼</string>
    <string name="check_password">確認密碼</string>
    <string name="menu_shop">商品</string>
    <string name="menu_home">首頁</string>
    <string name="Login">登入</string>
    <string name="register">註冊</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="action_Search" />
    <string name="action_login">登入</string>
    <string name="action_logout">登出</string>
    <string name="menu_history">歷史紀錄</string>
    <string name="confirm">確認</string>
    <string name="todo">TODO</string>
    <string name="logout">登出</string>
    <string name="Guest">Guest</string>
    <string name="menu_customer">客服</string>
    <string name="google_map">google_map</string>

    <string-array name="product_cost">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>