<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">


    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.cakeshop.HomeFragment"
        android:label="@string/Home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.cakeshop.LoginFragment"
        android:label="@string/Login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.cakeshop.RegisterFragment"
        android:label="@string/Register_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.cakeshop.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.cakeshop.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.cakeshop.ui.customer.Customer_ServiceFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer_service" />

</navigation>